refactor: 다건 조회 케이스 size 검증 추가